2024-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version to 1.0.13.6
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* inst/tinytest/test_date.R: Minor adjustment to datetime format test
	following R Dev Day change for R bug 17350 (and issue #1347 here)

2024-11-25  Simon Guest  <simon.guest@tesujimath.org>

	* src/attributes.cpp: fix CPP source having to be writable

2024-11-03  Marco Colombo  <mar.colombo13@gmail.com>

	* vignettes/rmd/Rcpp-FAQ.Rmd: Fixed typos
	* vignettes/rmd/Rcpp-attributes.Rmd: Idem
	* vignettes/rmd/Rcpp-extending.Rmd: Idem
	* vignettes/rmd/Rcpp-introduction.Rmd: Idem
	* vignettes/rmd/Rcpp-libraries.Rmd: Idem
	* vignettes/rmd/Rcpp-modules.Rmd: Idem
	* vignettes/rmd/Rcpp-package.Rmd: Idem
	* vignettes/rmd/Rcpp-quickref.Rmd: Idem
	* vignettes/rmd/Rcpp-sugar.Rmd: Idem

2024-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Minor code edit, removal of two no longer
	required setters for tinytest

2024-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version to 1.0.13.5
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-10-31  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/r/compat.h: Require R (>= 4.5.0) for new APIs

2024-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version to 1.0.13.4
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* .github/workflows/ci.yaml (jobs): Roll checkout action to v4

2024-10-26  Gábor Csárdi  <csardi.gabor@gmail.com>

	* inst/include/Rcpp/exceptions_impl.h: check for DragonFlyBSD to fix
	compilation

2024-10-07  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/platform/compiler.h: Uncomment
	HAS_VARIADIC_TEMPLATES macro definition
	* src/api.cpp: Simplify checks for variadic templates
	* inst/include/Rcpp/DataFrame.h: Idem
	* inst/include/Rcpp/DottedPair.h: Idem
	* inst/include/Rcpp/Function.h: Idem